# wetgraphics

./: .gitignore  Cargo.toml  build.rs
src/: imgui_wgpu.rs  imgui_windowed.rs  main.rs  main2.rs  mainloop.rs  mainloop_attempt.rs  serialize.rs  shader.frag.spv  shader.vert.spv  shader_compile.rs  shaders.rs  util.rs  wgpu_base.rs  wgpu_windowed.rs  window.rs
src/app/: mod.rs
src/imgui/: clipboard.rs  imgui_wgpu.rs  imgui_windowed.rs  mod.rs
src/mainloop/: mod.rs  wgpu_imgui.rs  wgpu_plain.rs  wgpu_screenshot.rs
src/shaders/: diffuse_pass.comp  draw_agents.comp  init_agents.comp  pixels.comp  shader.frag  shader.vert  shared_agents.glsl
src/shaders/std/: consts.glsl  rand.glsl
src/wgpu/: base.rs  bind_group.rs  buffer.rs  mod.rs  pipeline.rs  shaders.rs  texture.rs  wgpu_base.rs  wgpu_windowed.rs  windowed.rs
