[package]
name = "wetgraphics"
version = "0.2.0"
authors = [ "dzil123 <5725958+dzil123@users.noreply.github.com>" ]
edition = "2018"

[dependencies]
bytemuck = "1.5"
imgui = "0.7"
imgui-wgpu = "0.14"
imgui-winit-support = "0.7"
phf = "0.8"
pollster = "0.2"
wgpu = "0.7"
wgpu-subscriber = "0.1"
winit = "0.24"

[build_dependencies]
phf_codegen = "0.8"
shaderc = "0.7"
walkdir = "2.3"
