[package]
name = "wetgraphics"
version = "0.2.0"
authors = ["dzil123 <5725958+dzil123@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bytemuck = { version = "1.5", features = ["derive"] }
clipboard = "0.5"
crevice = "0.6"
env_logger = "0.8"
glam = { version = "0.15", features = ["bytemuck", "mint"] }
image = { version = "0.23", default-features = false, features = ["png"] }
imgui = "0.7"
imgui-wgpu = "0.15"
imgui-winit-support = { version = "0.7", default-features = false, features = ["winit-25"] }
phf = "0.8"
pollster = "0.2"
wgpu = "0.8"
winit = { version = "0.25", default-features = false, features = ["x11"] }

[patch.crates-io]
imgui = { git = "https://github.com/dzil123/imgui-rs/", branch = "combined" }
imgui-sys = { git = "https://github.com/dzil123/imgui-rs/", branch = "combined" }
imgui-winit-support = { git = "https://github.com/dzil123/imgui-rs/", branch = "combined" }

[build_dependencies]
phf_codegen = "0.8"
lazy_static = "1.4"
shaderc = "0.7"
walkdir = "2.3"
